feat(skills): testing batch + license-scanner — 15 SKILL.md improved (v6.9.20)
14 testing skills + 1 compliance (license-scanner) ran the full improvement
loop. 7-language coverage where meaningful; C/C++/SQL skipped with rationale
in skills where they don't apply (E2E, smoke, playwright).

Testing:
- playwright-qa (golden-path E2E, axe-core integration, trace viewer)
- coverage-enforcer (branch + diff coverage, Stryker/PIT mutation cross-link)
- coverage-mapper (risk-rank uncovered code, full Python pipeline reference)
- smart-test-runner (TIA on PR, full on main, flaky quarantine)
- quality-gate-runner (parallel DAG, OIDC, reusable workflows)
- 4 writers: unit, integration, e2e, property — AAA, Testcontainers,
  golden-paths-only E2E, invariant-based properties
- 5 runners: unit, integration, e2e, smoke, mutation — sharding, reuse mode,
  ≤2 min smoke budget, 75% mutation score on critical paths

Compliance:
- license-scanner — SPDX 2.3+ allowlist, AGPL block for SaaS, per-ecosystem
  CLIs (npm/pip/cargo/nuget/maven/go), FOSSA/Snyk/Black Duck/ScanCode

All preserve YAML frontmatter, severity reconciliation (triage vs always-
critical wire), Tool Integration (2026), Letter schema. Refinement-loop
critic-mode footer preserved verbatim.

No invented stats — citations from Playwright docs, Vitest docs, JUnit
Platform, Stryker, PIT, Hypothesis, fast-check, Testcontainers, pgTAP,
OSV-Scanner, FOSSA, OneUptime, BrowserStack.

No real credentials or PII in any example.

Tests: 1521/1521.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>