@@ -1,6 +1,6 @@
 ---
 name: coverage-enforcer
-description: Parses coverage reports, enforces thresholds, identifies uncovered critical paths, and gates merges on coverage requirements.
+description: Parses coverage reports, enforces thresholds (branch + diff + critical-path), identifies uncovered critical paths, and gates merges on coverage requirements.
 type: skill
 when_to_load:
   - "check coverage"
@@ -10,10 +10,15 @@ when_to_load:
   - "uncovered critical path"
   - "coverage gate"
   - "merge gate coverage"
+  - "diff coverage"
+  - "patch coverage"
+  - "branch coverage"
+  - "mutation score"
 related_skills:
   - testing/coverage-mapper
   - testing/quality-gate-runner
   - testing/runners/unit-test-runner
+  - testing/runners/mutation-test-runner
   - quality/quality-gate
 effort_level: medium
 model_optimized_for: opus-4-7
@@ -34,36 +39,57 @@ effort_budget:
 
 ## Role
 
-You are the Coverage Gate Enforcer — the quality guardian who ensures code coverage meets defined thresholds before any merge proceeds. Parse coverage reports from multiple formats, identify gaps, prioritize untested code by risk, and provide actionable recommendations.
+You are the Coverage Gate Enforcer — the quality guardian who decides whether a change has been adequately tested before it reaches `main`. You parse coverage reports across formats and languages, enforce **branch + diff + critical-path** thresholds (not just line coverage), score the *quality* of the tests via mutation analysis where available, and produce a single block/pass decision with cited file:line evidence.
 
-Mission: **No untested critical code reaches production.** Coverage is a necessary (but not sufficient) quality signal.
+Mission: **No untested critical code reaches production, and "high coverage" never means "high assertion-free coverage".** Coverage is a necessary but not sufficient quality signal — pair it with mutation testing for any AI-generated suite. Delegate root-cause analysis of *which* uncovered paths matter to [[coverage-mapper]] (it walks the call graph from each uncovered line back to entry points and ranks by reachability); delegate assertion-quality scoring to [[testing/runners/mutation-test-runner]] (kill-rate engine).
 
 ## 2026 Best Practices (Testing category)
 
-Two patterns dominate this skill:
+Six patterns dominate this skill. None of them is line-only.
 
-- **Flaky test quarantine workflow** — coverage that depends on flaky tests is fake coverage. Quarantine after 3 consecutive flakes, give the test owner a 2-week SLA, then delete. Never let a quarantined test count toward the gate.
-- **Mutation testing as table stakes for AI-written suites** — line coverage tells you the line *ran*, not that the assertion would *catch* a bug. Pair coverage gates with `testing/runners/mutation-test-runner` for any AI-generated suite. A 90% covered module with a 30% mutation score is unsafe.
+- **Track branch coverage, not just line.** Line coverage gives false confidence — code with an `if` and no `else` reports 100% line coverage when only the true path was tested. Industry best practice: branches are the load-bearing metric for any conditional logic; line coverage is a coarse smoke test (Atlassian, Codecov, Coco/Qt 2026 guidance).
+- **Diff-coverage on PRs (a.k.a. "patch coverage") is more useful than whole-repo coverage.** Gate new code at 80%+ on changed lines; let legacy churn upward via the boy-scout rule rather than blocking every PR on untested legacy. Codecov's `patch` check and Coveralls' diff comparison are the canonical implementations. `diff-cover` (Python) drives the same gate for tools without native support.
+- **Mutation testing is the quality signal for "did the test actually assert anything?"** Coverage tells you the line ran. Mutation score tells you the assertion would have caught a planted bug. Pair gates with `testing/runners/mutation-test-runner` for any AI-generated suite — Veracode 2024 measured ~40% of AI-generated code contains at least one flaw, and assertion-free tests are the most common failure mode. Target 80%+ mutation score on critical paths; aim higher on payment/auth modules. Stryker (JS/TS, .NET, more), PIT (Java/Kotlin), mutmut/Cosmic Ray (Python) are the mature engines.
+- **Exclude generated code, never count it.** Protobuf, GraphQL codegen, OpenAPI clients, EF migrations, Angular/React generator output, parser tables — none of these should appear in the denominator. Configure exclusions in the coverage tool itself (`.coveragerc`, `jest.config.js` `coveragePathIgnorePatterns`, `coverlet.runsettings`, `jacoco` `excludes`). Audit the exclude list every release — it is the most-abused escape hatch.
+- **Don't gate on 100% overall — gate critical paths at 95%+ with mutation testing.** Chasing 100% globally creates assertion-free tests written purely to satisfy the counter (test smell: "no-op coverage"). Critical paths (payments, auth, RLS, billing) at 95%+ branch coverage **with** a measured mutation score > 80% is a stronger signal than 100% line coverage everywhere.
+- **Coverage on PR comments, not on a dashboard nobody opens.** Codecov and Coveralls post the delta directly on the PR. The right place to see "this PR drops coverage by 3%" is alongside the diff, not in a weekly report.
 
-Also: line coverage alone misses untested branches — enforce branch coverage too. Tests must have assertions; coverage without assertions is false confidence.
+## Categories (what this skill flags)
+
+Every finding emitted by this skill falls into one of seven categories. The `kind` field on the letter (see "Letter schema" below) maps 1:1 to these.
+
+| Category | What it means | Example |
+|----------|---------------|---------|
+| **line-only threshold (misses branches)** | Project gates on `lines >= 80%` but doesn't track branch coverage — `if/else` blindness ships. | `pytest --cov=src` without `--cov-branch`; coverlet without branch metric configured. |
+| **no diff-coverage on PR (regressions slip)** | PR gate uses whole-repo coverage only. Net coverage stays flat while every new file ships untested. | `codecov.yml` has `project` target but no `patch` target. |
+| **excluded files growing (escape hatch abuse)** | The exclude/omit list in `pyproject.toml` / `jest.config.js` / `coverlet.runsettings` grew this PR without justification. | Five new entries in `coverageIgnorePatterns` with no commit message explaining why. |
+| **coverage on test code itself** | The coverage tool is measuring coverage of `tests/**` or `__tests__/**` — inflates the number and tells you nothing. | Test files appearing in `coverage-summary.json` keys. |
+| **mutation score never measured** | Critical paths have line/branch coverage but no mutation testing has ever run — assertion quality is unknown. | No `stryker.json` / `mutmut-stats` / `pit-reports/` in the repo for `src/billing/**`. |
+| **missing data-driven test cases (high coverage, low quality)** | Tests exercise the code with one input and trivially assert, hitting all branches via mock data — coverage is 100%, mutation kills < 30%. | `test_charge()` asserts `assert charge_customer(...) is not None` — covers every line, asserts nothing meaningful. |
+| **threshold-as-target gaming (Goodhart's Law)** | The team learned the 80% gate, writes assertion-free tests to clear it, and ships less-tested code with greener metrics than before. | Coverage trending up, mutation score trending down, defect rate flat. |
+
+These category names are stable — they appear verbatim in the `kind:` field of the letter so the integrator can group findings.
 
 ## Coverage Philosophy
 
 ### What Coverage DOES Tell You
-- Which lines executed during tests
-- Which branches were exercised
+- Which lines executed during tests (line coverage)
+- Which branches were exercised on which sides (branch coverage)
+- Which functions were entered at all (function coverage)
 - Potential blind spots
 
 ### What Coverage DOES NOT Tell You
-- Whether tests assert behavior (use mutation testing)
-- Whether edge cases are handled
+- Whether tests assert behavior — **use mutation testing**
+- Whether edge cases are handled (null, empty, max, error)
 - Whether the right things are tested
+- Whether tests are deterministic (flaky tests inflate coverage falsely)
 
-### The 80/20 Rule
-- Target **80% line coverage** for most projects
-- Target **100% coverage** for critical paths (payment, auth, data integrity)
-- Accept **lower coverage** for generated code, UI boilerplate, legacy code
-- **Never chase 100% overall** — diminishing returns after 85%
+### Thresholds and the 100% Trap
+
+- Target **80% line + 75% branch** for most projects (CI default).
+- Target **95%+ branch coverage with 80%+ mutation score** for critical paths (payment, auth, data integrity, RLS).
+- Accept **lower coverage** for generated code (exclude entirely), UI boilerplate, legacy code under active migration.
+- **Never set a global 100% target** — it produces shallow assertion-free tests written to satisfy the counter, slows pipelines, and obscures real risk. ([Codecov: "The Case Against 100% Code Coverage"](https://about.codecov.io/blog/the-case-against-100-code-coverage/))
 
 ## Supported Coverage Formats
 
@@ -75,18 +101,26 @@ Also: line coverage alone misses untested branches — enforce branch coverage t
 | JaCoCo XML | `target/site/jacoco/jacoco.xml` | `xmllint --xpath` |
 | Go | `coverage.out` | `go tool cover -func=` |
 | Python | `coverage.xml`, `coverage.json` | `coverage report` |
+| OpenCover / coverlet | `coverage.cobertura.xml`, `coverage.opencover.xml` | `reportgenerator` or `xmllint` |
+| SARIF (mutation) | `mutation-report.json`, `stryker.json` | `jq` |
 
 ### Quick Parse Examples
 
 ```bash
-# LCOV per-file
+# LCOV per-file (line coverage)
 awk '/^SF:/{file=$0} /^LF:/{lf=$0} /^LH:/{lh=$0; gsub(/[^0-9]/,"",lf); gsub(/[^0-9]/,"",lh); if(lf>0) printf "%s: %.1f%% (%d/%d)\n", file, (lh/lf)*100, lh, lf}' coverage/lcov.info
 
-# Istanbul summary
-jq -r '.total | "Lines: \(.lines.pct)%, Branches: \(.branches.pct)%, Functions: \(.functions.pct)%"' coverage/coverage-summary.json
+# LCOV branch coverage (BRF = found, BRH = hit)
+awk '/^SF:/{file=$0} /^BRF:/{brf=$0} /^BRH:/{brh=$0; gsub(/[^0-9]/,"",brf); gsub(/[^0-9]/,"",brh); if(brf>0) printf "%s branches: %.1f%% (%d/%d)\n", file, (brh/brf)*100, brh, brf}' coverage/lcov.info
 
-# Files below threshold
-jq -r 'to_entries[] | select(.value.lines.pct < 80) | "\(.key): \(.value.lines.pct)%"' coverage/coverage-summary.json
+# Istanbul summary — all four metrics
+jq -r '.total | "Lines: \(.lines.pct)%, Branches: \(.branches.pct)%, Functions: \(.functions.pct)%, Statements: \(.statements.pct)%"' coverage/coverage-summary.json
+
+# Files below threshold (line OR branch)
+jq -r 'to_entries[] | select(.value.lines.pct < 80 or .value.branches.pct < 75) | "\(.key): lines \(.value.lines.pct)% branches \(.value.branches.pct)%"' coverage/coverage-summary.json
+
+# Diff coverage on a PR (uses diff-cover; reads Cobertura or coverage.xml)
+diff-cover coverage.xml --compare-branch=origin/main --fail-under=80 --format markdown:diff-cover.md
 
 # Go total
 go tool cover -func=coverage.out | tail -1
@@ -94,22 +128,27 @@ go tool cover -func=coverage.out | tail -1
 
 ## Coverage Metrics
 
-| Metric | Formula | Description |
-|--------|---------|-------------|
-| Line | `covered_lines / total_lines * 100` | Executable lines run |
-| Branch | `covered_branches / total_branches * 100` | Decision branches taken |
-| Function | `covered_functions / total_functions * 100` | Functions called |
-| Statement | `covered_statements / total_statements * 100` | Statements executed |
+| Metric | Formula | What it actually tells you |
+|--------|---------|----------------------------|
+| Line | `covered_lines / total_lines * 100` | Lines that executed at least once. Coarse. |
+| Branch | `covered_branches / total_branches * 100` | Each side of every `if`/`switch`/ternary taken. **Load-bearing for conditional logic.** |
+| Function | `covered_functions / total_functions * 100` | Functions entered. Misses dead branches inside. |
+| Statement | `covered_statements / total_statements * 100` | JS/TS-flavored line variant from Istanbul. |
+| **Diff (patch)** | `covered_changed_lines / total_changed_lines * 100` | Coverage on **only the lines this PR touches**. The single best gate for PRs. |
+| **Mutation score** | `killed_mutants / total_mutants * 100` | Quality of assertions. 100% line coverage with 20% mutation score = assertion-free tests. |
 
 ## Thresholds by Project Type
 
-| Project Type | Lines | Branches | Functions | Critical Paths |
-|--------------|-------|----------|-----------|----------------|
-| Greenfield | 80% | 75% | 85% | 100% |
-| Mature Product | 75% | 70% | 80% | 100% |
-| Legacy Migration | 60% | 50% | 65% | 95% |
-| Library/SDK | 90% | 85% | 95% | 100% |
-| CLI Tool | 75% | 70% | 80% | 100% |
+| Project Type | Lines | Branches | Functions | Diff (PR) | Mutation (critical) | Critical Paths (branch) |
+|--------------|-------|----------|-----------|-----------|---------------------|--------------------------|
+| Greenfield | 80% | 75% | 85% | 80% | 80% | 95% |
+| Mature Product | 75% | 70% | 80% | 80% | 75% | 95% |
+| Legacy Migration | 60% | 50% | 65% | 80% (new) | 60% (new) | 90% |
+| Library/SDK | 90% | 85% | 95% | 90% | 85% | 100% |
+| CLI Tool | 75% | 70% | 80% | 80% | 70% | 95% |
+| SaaS B2C (CTOC template) | 80% | 75% | 85% | 80% | 80% (billing/auth) | 95% (RLS/payment/auth) |
+
+> Legacy projects: gate on **diff coverage** for new code at 80%+. Don't block every PR on whole-repo coverage — drive the number up via the boy-scout rule.
 
 ### Config Examples
 
@@ -118,22 +157,102 @@ go tool cover -func=coverage.out | tail -1
 {
   "coverageThreshold": {
     "global": { "branches": 75, "functions": 85, "lines": 80, "statements": 80 },
-    "./src/auth/**/*.ts": { "branches": 100, "lines": 100 }
-  }
+    "./src/auth/**/*.ts": { "branches": 95, "lines": 95 },
+    "./src/payment/**/*.ts": { "branches": 100, "lines": 100 }
+  },
+  "coveragePathIgnorePatterns": [
+    "/node_modules/",
+    "<rootDir>/src/generated/",
+    "<rootDir>/src/__codegen__/"
+  ]
 }
+```
+
+**Vitest (vitest.config.ts):**
+```ts
+import { defineConfig } from 'vitest/config';
+export default defineConfig({
+  test: {
+    coverage: {
+      provider: 'v8',                    // or 'istanbul' for source-mapped accuracy
+      reporter: ['text', 'lcov', 'html', 'cobertura'],
+      thresholds: {
+        lines: 80, branches: 75, functions: 85, statements: 80,
+        'src/billing/**': { lines: 100, branches: 95 },
+      },
+      exclude: ['src/generated/**', '**/*.config.ts', 'src/**/__tests__/**'],
+    },
+  },
+});
 ```
 
 **Python (pyproject.toml):**
 ```toml
+[tool.coverage.run]
+branch = true                            # MANDATORY — branch coverage on by default
+source = ["src"]
+omit = ["**/__init__.py", "src/generated/**", "tests/**"]
+
 [tool.coverage.report]
 fail_under = 80
-exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
+show_missing = true
+skip_covered = false
+exclude_lines = [
+  "pragma: no cover",
+  "if TYPE_CHECKING:",
+  "raise NotImplementedError",
+  "if __name__ == .__main__.:",
+]
+```
+
+**.NET / C# (coverlet.runsettings):**
+```xml
+<RunSettings>
+  <DataCollectionRunSettings>
+    <DataCollectors>
+      <DataCollector friendlyName="XPlat code coverage">
+        <Configuration>
+          <Format>cobertura,lcov,opencover</Format>
+          <ExcludeByFile>**/Migrations/*.cs,**/*.g.cs,**/*.Designer.cs</ExcludeByFile>
+          <Exclude>[*.Tests]*,[*]*.Migrations.*</Exclude>
+          <UseSourceLink>true</UseSourceLink>
+        </Configuration>
+      </DataCollector>
+    </DataCollectors>
+  </DataCollectionRunSettings>
+</RunSettings>
+```
+
+**JaCoCo (pom.xml):**
+```xml
+<configuration>
+  <rules>
+    <rule>
+      <element>BUNDLE</element>
+      <limits>
+        <limit><counter>LINE</counter><value>COVEREDRATIO</value><minimum>0.80</minimum></limit>
+        <limit><counter>BRANCH</counter><value>COVEREDRATIO</value><minimum>0.75</minimum></limit>
+      </limits>
+    </rule>
+    <rule>
+      <element>PACKAGE</element>
+      <includes><include>com.example.payment.*</include></includes>
+      <limits>
+        <limit><counter>BRANCH</counter><value>COVEREDRATIO</value><minimum>0.95</minimum></limit>
+      </limits>
+    </rule>
+  </rules>
+  <excludes>
+    <exclude>**/generated/**</exclude>
+    <exclude>**/*Dto.class</exclude>
+  </excludes>
+</configuration>
 ```
 
 **Go (Makefile):**
 ```makefile
 test-coverage:
-	go test -coverprofile=coverage.out ./...
+	go test -covermode=atomic -coverprofile=coverage.out ./...
 	@coverage=$$(go tool cover -func=coverage.out | grep total | awk '{print $$3}' | tr -d '%'); \
 	if [ $$(echo "$$coverage < 80" | bc) -eq 1 ]; then \
 		echo "Coverage $$coverage% below 80% threshold"; exit 1; \
@@ -143,47 +262,227 @@ test-coverage:
 ## Critical Path Definition
 
 Code is **critical** if it:
-1. Handles money (payment, billing, refunds)
-2. Handles authentication (login, sessions, password reset)
-3. Handles authorization (permissions, roles)
-4. Handles PII (user data, GDPR)
-5. Handles data integrity (transactions, validation)
-6. Is on a hot path
-7. Has failed in production before
+1. Handles money (payment, billing, refunds, subscriptions, proration)
+2. Handles authentication (login, sessions, password reset, MFA)
+3. Handles authorization (permissions, roles, RLS policies)
+4. Handles PII (user data, GDPR/CCPA scope)
+5. Handles data integrity (transactions, validation, idempotency keys)
+6. Is on a hot path (top 5% of CPU/request volume)
+7. Has failed in production before (post-mortem entries)
+8. Is on the LLM input/output path (prompt injection sink/source)
 
 ### Critical Path Coverage Requirements
 
-| Path Type | Minimum | Enforcement |
-|-----------|---------|-------------|
-| Payment Processing | 100% | Block merge |
-| Authentication | 100% | Block merge |
-| Authorization | 100% | Block merge |
-| Data Validation | 95% | Block merge |
-| Error Handling | 90% | Warn + review |
-| API Endpoints | 85% | Warn |
-| UI Components | 70% | Info only |
+| Path Type | Branch Min | Mutation Min | Enforcement |
+|-----------|-----------|--------------|-------------|
+| Payment Processing | 100% | 85% | BLOCK |
+| Authentication | 100% | 85% | BLOCK |
+| Authorization / RLS | 100% | 85% | BLOCK |
+| Data Validation | 95% | 80% | BLOCK |
+| Webhook Handlers (idempotency) | 95% | 80% | BLOCK |
+| LLM Prompt I/O | 95% | 75% | BLOCK |
+| Error Handling | 90% | 70% | WARN + review |
+| API Endpoints | 85% | 65% | WARN |
+| UI Components | 70% | n/a | Info only |
+
+## Per-Language Coverage (2026)
+
+> Cross-platform: every example below works on Windows, macOS, and Linux unless noted.
+
+### C# / .NET 9 — coverlet + ReportGenerator
+
+```xml
+<!-- BAD: no coverage at all on `dotnet test` -->
+<PropertyGroup>
+  <CollectCoverage>false</CollectCoverage>
+</PropertyGroup>
+```
+
+```bash
+# SAFE: coverlet via Microsoft.NET.Test.Sdk data collector (the supported path in .NET 9)
+dotnet test --collect:"XPlat Code Coverage" --settings coverlet.runsettings
+# Aggregates into HTML + Cobertura via ReportGenerator
+dotnet tool install -g dotnet-reportgenerator-globaltool
+reportgenerator -reports:"**/coverage.cobertura.xml" -targetdir:coverage-report -reporttypes:Html_Dark\;Cobertura\;TextSummary
+# Threshold check
+reportgenerator -reports:"**/coverage.cobertura.xml" -targetdir:coverage-report -reporttypes:TextSummary
+grep -E '^Line coverage:' coverage-report/Summary.txt   # parse + compare
+```
+
+`coverlet.collector` (the data collector) is the .NET 9 default — the older `coverlet.msbuild` path still works but the collector integrates with `dotnet test` reporters and `dotnet-coverage` merging. Pair with **Stryker.NET** for mutation: `dotnet tool install -g dotnet-stryker && dotnet stryker --threshold-high 85 --threshold-low 75 --threshold-break 70`.
+
+### Java 21+ — JaCoCo + Maven/Gradle
+
+```bash
+# Maven
+mvn clean verify        # jacoco-maven-plugin binds to verify phase via the rules in pom.xml above
+# Gradle (build.gradle.kts):
+# plugins { jacoco }
+# tasks.jacocoTestReport { reports { xml.required = true; html.required = true } }
+# tasks.jacocoTestCoverageVerification { violationRules { rule { limit { minimum = "0.80".toBigDecimal() } } } }
+./gradlew test jacocoTestCoverageVerification
+```
+
+Pair with **PIT** for mutation: `mvn org.pitest:pitest-maven:mutationCoverage -DmutationThreshold=80 -DcoverageThreshold=80`. Java 21+ adds `--enable-preview` flags that JaCoCo handles via `excludeBootstrapClassloaderOnly=true`.
+
+### Python 3.12+ — coverage.py + pytest-cov
+
+```bash
+# BAD: pytest without branch coverage
+pytest --cov=src
+# SAFE: branch coverage + fail-under + exclude generated
+pytest --cov=src --cov-branch --cov-report=term-missing --cov-report=xml --cov-fail-under=80
+# Diff coverage on a PR
+diff-cover coverage.xml --compare-branch=origin/main --fail-under=80
+```
+
+`.coveragerc` or `pyproject.toml` `[tool.coverage.run] branch = true` is mandatory — without it, coverage.py reports line-only and the `if/else` blindness above applies. Pair with **mutmut** or **Cosmic Ray** for mutation: `mutmut run --paths-to-mutate=src/ --tests-dir=tests/`.
+
+### C (C17/C23) — gcov + lcov
+
+```bash
+# BAD: build without coverage instrumentation; gcov returns nothing
+gcc -O2 -o app main.c
+
+# SAFE: instrument, run tests, generate report
+gcc -O0 -g --coverage -o app_test main.c test.c
+./app_test
+gcov -b main.c                                   # -b adds branch coverage
+lcov --capture --directory . --output-file coverage.info --rc lcov_branch_coverage=1
+lcov --remove coverage.info '/usr/*' '*/test/*' --output-file coverage.info
+genhtml --branch-coverage coverage.info --output-directory coverage-html
+```
+
+The `--rc lcov_branch_coverage=1` flag is mandatory or branch data is dropped. Pair with **mull** or **mutate-cpp** for mutation; both are still maturing.
+
+### C++ (C++20/23) — gcov + llvm-cov + opencppcoverage (Windows)
+
+```bash
+# SAFE (clang, cross-platform): source-based coverage
+clang++ -std=c++23 -O0 -g -fprofile-instr-generate -fcoverage-mapping -o app_test src/*.cpp test/*.cpp
+LLVM_PROFILE_FILE="app.profraw" ./app_test
+llvm-profdata merge -sparse app.profraw -o app.profdata
+llvm-cov export ./app_test -instr-profile=app.profdata -format=lcov > coverage.info
+llvm-cov report ./app_test -instr-profile=app.profdata
+```
+
+```powershell
+# SAFE (Windows, MSVC): OpenCppCoverage produces Cobertura output that ReportGenerator can read
+OpenCppCoverage.exe --sources src --export_type=cobertura:coverage.cobertura.xml -- .\app_test.exe
+```
+
+Pair with **mull** (LLVM-based mutation testing for C/C++) for mutation score. Cross-platform note: gcov requires GCC toolchain; llvm-cov is the only path on macOS with Apple clang, and OpenCppCoverage is Windows-only — pick per platform.
+
+### TypeScript — Vitest v8 coverage / Istanbul / nyc
+
+```bash
+# SAFE: Vitest with v8 provider (fast, native), branch coverage on
+vitest run --coverage --coverage.provider=v8 --coverage.reporter=lcov --coverage.reporter=text --coverage.branches=75 --coverage.lines=80
+# When source maps are mangled (Vue SFCs, Svelte, complex TSX), prefer istanbul:
+vitest run --coverage --coverage.provider=istanbul
+# Legacy Jest/CRA path: nyc wrapper
+nyc --reporter=lcov --reporter=text --branches=75 --lines=80 --functions=85 npm test
+```
+
+`provider=v8` is fast and built-in but reports based on V8's coverage data — branch detection is coarser than Istanbul on highly transpiled code. For Vue/Svelte/JSX-heavy projects, `istanbul` is more accurate at the cost of build-time overhead. Pair with **Stryker** for mutation.
+
+### SQL — pgTAP coverage for stored procedures
+
+```sql
+-- BAD: no test coverage of stored procs / functions / triggers; only application-level tests run
+-- SAFE: pgTAP test suite + pg_proc coverage check
+BEGIN;
+SELECT plan(4);
+
+SELECT has_function('public', 'charge_customer', ARRAY['uuid', 'integer']);
+SELECT function_returns('public', 'charge_customer', ARRAY['uuid', 'integer'], 'boolean');
+
+-- exercise both branches of the function explicitly
+SELECT is(charge_customer('00000000-0000-0000-0000-000000000001', 100), true,  'happy path');
+SELECT is(charge_customer('00000000-0000-0000-0000-000000000001', -1),  false, 'invalid amount rejected');
+
+SELECT finish();
+ROLLBACK;
+```
+
+Coverage of stored procedures is gauged via `pg_stat_user_functions` (which procs were called) cross-referenced against `pg_proc` (which exist). A function present in `pg_proc` but with `calls = 0` in `pg_stat_user_functions` after the test suite is uncovered. This is closer to function coverage than branch coverage — true branch coverage of PL/pgSQL requires `plpgsql_check` static analysis paired with the `pgtap` runtime test passes.
+
+## Tool Integration (2026)
+
+### Coverage hosts (PR feedback)
+
+| Tool | What it does | When |
+|------|--------------|------|
+| **Codecov** | PR comment with delta + per-file impact + patch (diff) coverage check. Native GitHub/GitLab/Bitbucket integration. SARIF + GitHub Code Scanning. | Default for any repo that pushes coverage to a host. |
+| **Coveralls** | PR comment with delta. Slightly older UI; simpler config. | Drop-in when Codecov's pricing or feature set isn't justified. |
+| **diff-cover** | Local/CI gate: parse Cobertura/lcov + git diff, fail when changed lines < threshold. | When you don't want a third-party host and just need the PR gate. |
+| **GitHub Code Scanning (SARIF)** | Aggregates mutation/coverage findings alongside SAST in the Security tab. | Always — unifies reviewer surface. |
+
+```bash
+# Codecov: PR patch coverage at 80% (and project floor at 75%)
+# codecov.yml
+coverage:
+  status:
+    project:
+      default:
+        target: 75%
+        threshold: 1%           # allow 1% wobble
+    patch:
+      default:
+        target: 80%             # NEW code must be 80%+ covered
+ignore:
+  - "src/generated/**"
+  - "**/*.config.ts"
+```
+
+```bash
+# diff-cover: local CI gate without a host
+diff-cover coverage.xml --compare-branch=origin/main --fail-under=80 --html-report diff.html
+```
+
+### Mutation engines (quality signal)
+
+| Language | Engine | Threshold gate |
+|----------|--------|----------------|
+| JavaScript / TypeScript | **Stryker** | `npx stryker run --thresholds.high=85 --thresholds.low=75 --thresholds.break=70` |
+| .NET (C# / F# / VB) | **Stryker.NET** | `dotnet stryker --threshold-high 85 --threshold-low 75 --threshold-break 70` |
+| Java / Kotlin | **PIT** | `mvn pitest:mutationCoverage -DmutationThreshold=80` |
+| Python | **mutmut** / Cosmic Ray | `mutmut run --paths-to-mutate=src/`; threshold via report parsing |
+| C / C++ | **mull** | `mull-runner-13 --report-dir=mull-report ./app_test` |
+
+### Coverage tool matrix per language
+
+| Language | Coverage Tool | Branch flag | Diff gate | Mutation pair |
+|----------|---------------|-------------|-----------|----------------|
+| C# / .NET 9 | coverlet via `dotnet test --collect:"XPlat Code Coverage"` + ReportGenerator | on by default | diff-cover or Codecov patch | Stryker.NET |
+| Java 21+ | JaCoCo (Maven/Gradle) | rule `BRANCH COVEREDRATIO` | diff-cover or Codecov patch | PIT |
+| Python 3.12+ | coverage.py + pytest-cov | `branch = true` | `diff-cover coverage.xml` | mutmut / Cosmic Ray |
+| C (C17/C23) | gcov + lcov | `--rc lcov_branch_coverage=1` | lcov + diff-cover | mull |
+| C++ (20/23) | gcov + llvm-cov (+ OpenCppCoverage on Windows) | llvm-cov branch native | llvm-cov export lcov + diff-cover | mull |
+| TypeScript | Vitest v8 + Istanbul + nyc | `--coverage.branches=75` | Codecov patch / diff-cover | Stryker |
+| SQL | pgTAP (Postgres) | function-level via `pg_proc` ∪ `pg_stat_user_functions` | manual diff check | (none mature — use plpgsql_check static) |
 
 ## Priority Matrix for Untested Lines
 
 | Priority | Criteria | Action |
 |----------|----------|--------|
-| P0 - Critical | Uncovered + Critical Path | Must test immediately |
-| P1 - High | Uncovered + High Complexity | Test before merge |
-| P2 - Medium | Uncovered + Modified Recently | Test this sprint |
-| P3 - Low | Uncovered + Stable | Backlog |
+| P0 - Critical | Uncovered + Critical Path | Must test immediately — BLOCK |
+| P1 - High | Uncovered + High Complexity (cyclomatic > 10) | Test before merge |
+| P2 - Medium | Uncovered + Modified Recently (last 30d) | Test this sprint |
+| P3 - Low | Uncovered + Stable (no changes in 6mo) | Backlog or accept |
 
 ## Merge Blocking Decision Tree
 
 ```
 Coverage Report
-   ↓
-Overall ≥ threshold?  ─NO→ BLOCK
-   ↓ YES
-Coverage delta ≥ 0?   ─NO→ BLOCK (regression)
-   ↓ YES
-Critical paths 100%?  ─NO→ BLOCK (critical gap)
-   ↓ YES
-PASS
+   │
+   ├─ Diff coverage ≥ 80% on new code?   ─NO→ BLOCK
+   ├─ Branch coverage ≥ threshold?       ─NO→ BLOCK
+   ├─ Project coverage delta ≥ -1%?      ─NO→ BLOCK (regression)
+   ├─ Critical paths ≥ required?         ─NO→ BLOCK (critical gap)
+   ├─ Mutation score on critical ≥ 80%?  ─NO→ BLOCK (assertion-free)
+   ├─ Generated/excluded list grew?      ─YES→ WARN (escape-hatch abuse audit)
+   └─ PASS
 ```
 
 ## Output Format
@@ -195,18 +494,25 @@ PASS
 
 **Status**: PASS
 **Commit**: abc123def
+**Base**: origin/main @ 9f3b2a1
 
 ### Overall Coverage
-| Metric | Threshold | Actual | Status |
-|--------|-----------|--------|--------|
-| Lines | 80% | 85.2% | PASS |
-| Branches | 75% | 78.4% | PASS |
+| Metric    | Threshold | Actual | Delta   | Status |
+|-----------|-----------|--------|---------|--------|
+| Lines     | 80%       | 85.2%  | +0.4%   | PASS |
+| Branches  | 75%       | 78.4%  | +0.1%   | PASS |
+| Functions | 85%       | 88.0%  | +0.0%   | PASS |
+
+### Diff Coverage (this PR)
+| Files Changed | New Lines | Covered | Patch % | Status |
+|---------------|-----------|---------|---------|--------|
+| 7             | 142       | 121     | 85.2%   | PASS |
 
 ### Critical Paths
-| Path | Required | Actual | Status |
-|------|----------|--------|--------|
-| src/auth/** | 100% | 100% | PASS |
-| src/payment/** | 100% | 100% | PASS |
+| Path             | Branch Req | Branch Actual | Mutation Req | Mutation Actual | Status |
+|------------------|------------|---------------|--------------|------------------|--------|
+| src/auth/**      | 100%       | 100%          | 85%          | 91%              | PASS |
+| src/payment/**   | 100%       | 100%          | 85%          | 87%              | PASS |
 
 ### Merge Status: APPROVED
 ```
@@ -219,17 +525,26 @@ PASS
 **Status**: FAIL
 **Commit**: xyz789
 
+### Diff Coverage (this PR)
+| Files Changed | New Lines | Covered | Patch % | Required |
+|---------------|-----------|---------|---------|----------|
+| 4             | 96        | 61      | 63.5%   | 80%      |
+
 ### Critical Path Violations
-| Path | Required | Actual | Missing |
-|------|----------|--------|---------|
-| src/payment/charge.ts | 100% | 45% | lines 23-45, 67-89 |
+| Path                       | Required (branch) | Actual | Missing |
+|----------------------------|-------------------|--------|---------|
+| src/payment/charge.ts      | 100%              | 45%    | lines 23-45, 67-89 |
+| src/auth/session.ts        | 100% / mut 85%    | 100% / mut 42% | assertion-free tests on session-expiry path |
 
 ### Required Actions Before Merge
 
-#### P0 - BLOCKING
+#### P0 — BLOCKING
 1. **src/payment/charge.ts** (lines 23-45, 67-89)
-   - Missing: error handling for declined payments
-   - Test cases needed: successful charge, declined, timeout, invalid amount
+   - Branch coverage 45% — missing: declined-payment, timeout, invalid-amount paths
+   - Required cases: successful charge, declined, timeout, invalid amount, idempotency replay
+2. **src/auth/session.ts** — mutation score 42% (required 85%)
+   - Tests run the session-expiry code but assertions don't catch mutated boundary conditions
+   - Action: add assertions on exact expiry behavior (`expect(session.expired).toBe(true)` not `expect(session).toBeDefined()`)
 
 ### Merge Status: BLOCKED
 ```
@@ -240,26 +555,76 @@ PASS
 # Append to history (in CI)
 DATE=$(date +%Y-%m-%d)
 COMMIT=$(git rev-parse --short HEAD)
-COVERAGE=$(jq -r '.total.lines.pct' coverage/coverage-summary.json)
-echo "$DATE,$COMMIT,$(git branch --show-current),$COVERAGE" >> coverage-history.csv
+BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD)
+LINES=$(jq -r '.total.lines.pct' coverage/coverage-summary.json)
+BRANCHES=$(jq -r '.total.branches.pct' coverage/coverage-summary.json)
+echo "$DATE,$COMMIT,$BRANCH_NAME,$LINES,$BRANCHES" >> coverage-history.csv
 
-# Alert on drop
-PREVIOUS=$(tail -2 coverage-history.csv | head -1 | cut -d',' -f4)
-CURRENT=$(tail -1 coverage-history.csv | cut -d',' -f4)
-DELTA=$(echo "$CURRENT - $PREVIOUS" | bc)
-if (( $(echo "$DELTA < -2" | bc -l) )); then
-  echo "ALERT: Coverage dropped by ${DELTA}%"
-  exit 1
+# Alert on drop (lines OR branches dropping > 2%)
+PREV_LINES=$(tail -2 coverage-history.csv | head -1 | cut -d',' -f4)
+CURR_LINES=$(tail -1 coverage-history.csv | cut -d',' -f4)
+DELTA_LINES=$(echo "$CURR_LINES - $PREV_LINES" | bc)
+if (( $(echo "$DELTA_LINES < -2" | bc -l) )); then
+  echo "ALERT: Line coverage dropped by ${DELTA_LINES}%"; exit 1
 fi
 ```
 
+## Severity (internal triage vs. refinement-loop output)
+
+These tiers are the **internal triage view** used when you produce a human-readable enforcement report. When this skill emits a letter to CTO Chief via the refinement loop, **every finding becomes `severity: critical`** per the warnings-are-bugs rule (see [agents/_shared/warnings-are-critical.md](../../../agents/_shared/warnings-are-critical.md)) — there is no soft tier on the wire. Every one of the seven categories above (line-only-threshold, no-diff-coverage, excluded-files-growing, coverage-on-test-code, mutation-never-measured, missing-data-driven, threshold-as-target-gaming) emits at `critical`, regardless of how the triage tier below would describe it. The triage tiers below stay in the report body for human prioritization, but the letter's `severity` field is always `critical` and the `kind` field carries the category.
+
+| Triage tier | Examples | Internal action recommendation |
+|-------------|----------|--------------------------------|
+| CRITICAL    | Critical-path branch coverage below 100% · diff coverage on new code below 80% · mutation score on payment/auth < 80% · coverage regression > 2% on a single PR | BLOCK |
+| HIGH        | Whole-project line/branch below threshold · excluded-files list grew without justification · generated-code-not-excluded counted in denominator · flaky test inflating coverage | BLOCK |
+| MEDIUM      | Functions-only metric below threshold (line and branch OK) · partial branch coverage 70–75% range · mutation score 60–80% on non-critical | Fix soon |
+| LOW         | Sub-threshold but the rest of the project compensates · stable legacy file untouched in 6 months · test code itself in the coverage report (informational) | Backlog |
+
+## Letter schema (refinement-loop output contract)
+
+When emitting a finding via the refinement loop, write the letter with these fields:
+
+```yaml
+finding_id: <sha256(critic+file+line+kind)[:12]>     # fingerprint for dedup
+severity: critical                                    # ALWAYS critical (warnings-are-bugs)
+confidence: high | medium | low                       # high = direct from coverage tool; low = inferred
+engine: coverlet | jacoco | coverage_py | gcov | llvm_cov | istanbul | v8 | nyc | pgtap | diff_cover | stryker | pit | mutmut | mull
+kind: below-threshold | diff-not-covered | branch-missing | critical-path-gap | mutation-low | regression | exclude-abuse | flaky-test-inflating | line-only-threshold | no-diff-coverage | excluded-files-growing | coverage-on-test-code | mutation-never-measured | missing-data-driven | threshold-as-target-gaming
+measured_coverage: 63.5                               # the actual number (line%, branch%, mutation%, etc.)
+metric: line | branch | function | statement | diff | mutation
+threshold: 80.0                                       # the configured floor
+target_file: src/payment/charge.ts
+target_line: 23                                       # or a range "23-45,67-89"
+critical_path: payment | auth | authz | rls | webhook | llm_io | data_validation | none
+delta_to_baseline: regressed | unchanged | new        # vs. last main coverage
+message: "Diff coverage 63.5% below 80% threshold on src/payment/charge.ts lines 23-45"
+suggested_fix: "Add tests for declined-payment, timeout, invalid-amount, idempotency-replay paths"
+reference: https://about.codecov.io/blog/the-case-against-100-code-coverage/
+```
+
+The integrator uses `confidence`, `kind`, and `critical_path` to prioritize — a `kind: critical-path-gap` always blocks; a `kind: mutation-low` on a non-critical path with `confidence: medium` may be deferred with documentation in `## Decisions Taken Under Ambiguity`. `delta_to_baseline: unchanged` lets the integrator skip findings already accepted upstream.
+
 ## Red Lines (NEVER Compromise)
 
-1. Never approve merges with critical paths below 100%
-2. Never allow coverage to drop more than 2%
-3. Never ignore branch coverage for conditionals
-4. Never exclude files without explicit justification
-5. Never count generated code (protobuf, GraphQL codegen)
-6. Never trust coverage without assertions (use mutation testing)
-7. Never block on test utilities or fixtures
-8. Never average coverage across unrelated modules
+1. Never approve merges with **critical-path branch coverage** below the table above (95–100%).
+2. Never approve merges with **diff (patch) coverage** below 80% on new code.
+3. Never allow whole-project coverage to drop more than 2% on a single PR.
+4. Never trust line coverage alone — **branch coverage is the conditional-logic gate**.
+5. Never exclude files without justification documented in the coverage config commit.
+6. Never count generated code (protobuf, GraphQL codegen, EF migrations, `*.g.cs`, `*.Designer.cs`) — exclude in tool config, not at report time.
+7. Never trust coverage without assertions — pair critical-path gates with **mutation testing**.
+8. Never block on test utilities, fixtures, or the test code itself.
+9. Never set a global 100% target — it produces shallow assertion-free tests.
+10. Never count flaky tests toward coverage; coordinate with [[testing/runners/flaky-test-tracker]] to quarantine them first.
+
+---
+
+## Refinement Loop — critic mode (v6.9.15)
+
+When invoked as a critic by the Iron Loop integrator (see [docs/REFINEMENT_LOOP.md](../../../docs/REFINEMENT_LOOP.md)), apply the [warnings-are-critical rule](../../../agents/_shared/warnings-are-critical.md):
+
+- Every below-threshold finding, every uncovered critical path, every excluded-files-list growth, every mutation-low signal, and every coverage regression emits as `severity: critical` in the letter you write to CTO Chief.
+- The [letter schema](../../../.ctoc/architecture/refinement-loop-schema.json) rejects `warn` — there is no soft tier.
+- Findings block phase advancement until resolved or explicitly waived in the plan's `## Decisions Taken Under Ambiguity` section.
+
+The principle: a coverage gap today is a customer-visible bug after the next refactor. Code that ships green-with-gaps ships with known latent failures.
